--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "npx playwright test"
+    "test": "npx playwright test",
+    "uee": "npm start & npx wait-on http://127.0.0.1:8080"
   },
   "keywords": [],
   "author": "",
